Refactor Liquibase changesets for user and offer tables, add sample user data, and update offer insertions to include user references (#33)
Co-authored-by: alopalka <alopalka@proton.me>